crates/nash-driver/src/compile/snapshots/nash_driver__compile__nitpick_source_tests__if_else_checked.snap
---
source: crates/nash-driver/src/compile/nitpick_source_tests.rs
description: "module Main exposing (..)\nimport Primitive exposing (type bool(..), Data(..))\nimport Builtin\nimport Eq exposing (Eq)\nimport Literal exposing (FromInt, FromString, FromBytes)\nf flag =\n    if flag then () else\n        case flag of\n            True -> ()\n"
info: diagnostic
---
nash::pattern::incomplete

  × Case expression is not exhaustive.
   ╭─[Main.nash:8:9]
 7 │         if flag then () else
 8 │ ╭─▶         case flag of
 9 │ ╰─▶             True -> ()
   ╰────
  help: Missing patterns:

            False

        Add the missing branches; use `todo` for unfinished bodies.
