crates/nash-driver/src/compile/snapshots/nash_driver__compile__nitpick_source_tests__impl_argument_checked.snap
---
source: crates/nash-driver/src/compile/nitpick_source_tests.rs
description: "module Main exposing (..)\nimport Primitive exposing (type bool(..), Data(..))\nimport Builtin\nimport Eq exposing (Eq)\nimport Literal exposing (FromInt, FromString, FromBytes)\ntrait Choose 'a where\n    choose : 'a -> unit\nimpl Choose bool where\n    choose True = ()\n"
info: diagnostic
---
nash::pattern::incomplete

  × Argument pattern is not exhaustive.
   ╭─[Main.nash:9:12]
 8 │ impl Choose bool where
 9 │     choose True = ()
   ·            ────
   ╰────
  help: Missing patterns:

            False

        Use a case expression in the function body to handle the missing patterns.
