crates/nash-driver/src/compile/snapshots/nash_driver__compile__nitpick_source_tests__imported_labeled_constructor_subset.snap
---
source: crates/nash-driver/src/compile/nitpick_source_tests.rs
description: "module Shapes exposing (type choice(..))\ntype choice = Choice { left : bool, right : unit } | Other\n\nmodule Main exposing (..)\nimport Shapes as S\nf x =\n    case x of\n        S.Choice { right } -> right\n        S.Other -> ()\n"
---
()
